--- a/Views/Shared/_header.cshtml
+++ b/Views/Shared/_header.cshtml
@@ -5,6 +5,8 @@
     string searchString = Session["SearchString"] != null ? (string)Session["SearchString"] : "";
     int currentContactId = Session["CurrentContactId"] != null ? (int)Session["CurrentContactId"] : 0;
     string currentContactName = Session["CurrentContactName"] != null ? (string)Session["CurrentContactName"] : "";
+    int selectedTown = Session["CurrentselectedTown"] != null ? (int)Session["CurrentselectedTown"] : 0;
+    var TownsList = (List<ContactsJSON.Models.Town>)Session["ContactsTowns"];
 }
 
 <div class="section roundedBorder">
@@ -86,7 +88,13 @@
 </div>
 @if (action == "list" && search)
 {
-    <input type="search" id="searchInput" class="section roundedBorder" value="@searchString" placeholder="Recherche...">
+    <div class="flex">
+        <input type="search" id="searchInput" class="section roundedBorder flexItem" value="@searchString" placeholder="Recherche...">
+        <div id="TownSelectPanel" class="flexItem">
+
+        </div>
+        
+    </div>
 }
 
 
