--- a/Views/Contacts/List.cshtml
+++ b/Views/Contacts/List.cshtml
@@ -11,27 +11,42 @@
 @section Scripts {
     <script>
         $(() => {
-            let contactListPanel = new AutoRefreshedPanel("ContactListPanel", "/Contacts/GetContacts", 10 /* refresh every 5 seconds */);
-            let townSelectAutoRefreshPanel = new AutoRefreshedPanel("TownSelectPanel", "/Contacts/GetContactsTownsList", 20, AttachEvents);
-            let keywordsOnchangeTimger = null;
+            let contactListAutoRefreshPanel = new AutoRefreshedPanel("ContactListPanel", "/Contacts/GetContacts", 5, contactListPostRefresh);
+            let townSelectAutoRefreshPanel = new AutoRefreshedPanel("TownSelectPanel", "/Contacts/GetContactsTownsList", -1 /* manually refreshed */, townSelectPostRefresh);
+            let keywordsOnchangeTimer = null;
+
             $("#searchInput").on('keyup', function () {
-                clearTimeout(keywordsOnchangeTimger);
+                clearTimeout(keywordsOnchangeTimer);
                 /* delay request by 0.5 seconds */
-                keywordsOnchangeTimger = setTimeout(() => {
+                keywordsOnchangeTimer = setTimeout(() => {
                     window.location = "/Contacts/SetSearchString?value=" + $("#searchInput").val();
                 }, 500 /* 0.5 seconds */);
             });
             $("#searchInput").on('search', function () { /* click on clear */
-                clearTimeout(keywordsOnchangeTimger);
+                clearTimeout(keywordsOnchangeTimer);
                 window.location = "/Contacts/SetSearchString?value=" + $("#searchInput").val();
             });
-            function AttachEvents() {
+            $("#searchInput").focus(function () {
+                contactListAutoRefreshPanel.pause();
+            });
+            $("#searchInput").blur(function () {
+                contactListAutoRefreshPanel.restart();
+            });
+            function contactListPostRefresh() {
+                townSelectAutoRefreshPanel.refresh(true);
+            }
+            function townSelectPostRefresh() {
+
                 $("#townSelect").off();
+                $("#townSelect").focus(function () {
+                    contactListAutoRefreshPanel.pause();
+                });
+                $("#townSelect").blur(function () {
+                    contactListAutoRefreshPanel.restart();
+                });
                 $("#townSelect").on('change', function () {
                     window.location = "/Contacts/SetSearchTown?value=" + $("#townSelect").val();
                 });
-                $("#townSelect").on('mouseenter', townSelectAutoRefreshPanel.pause);
-                $("#townSelect").on('mouseleave', townSelectAutoRefreshPanel.restart);
             }
         })
     </script>
