--- a/Views/Shared/_header.cshtml
+++ b/Views/Shared/_header.cshtml
@@ -57,7 +57,7 @@
                     <a href="/@controller/Edit" class="cmdIcon fa fa-pen-to-square" title="Modifier..."></a>
                     <i class="cmdIcon fa fa-trash-can"
                        title="Effacer"
-                       onclick="bootbox.confirm('<b style=color:red>Effacer le contact : </b><h3>@currentContactName?</h3>', function(result){ if (result) window.location = '/@controller/Delete'; })">
+                       onclick="bootbox.confirm(`<b style=color:red>Effacer le contact : </b><h3>@currentContactName?</h3>`, function(result){ if (result) window.location = '/@controller/Delete'; })">
                     </i>
                     <a href="/@controller/List" class="cmdIcon fa fa-square-xmark" title="retour"></a>
                 </div>
